--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 
     <!-- SharePoint-style logo -->
     <div class="sp-logo">
-      <!-- Make sure sharepoint-logo.png is in the same folder as this HTML file -->
-      <img src="sharepoint-logo.png" alt="SharePoint Logo" />
+      <img src="https://cdn-icons-png.flaticon.com/512/906/906310.png" alt="SharePoint Logo" />
     </div>
 
     <h1>Opening document in SharePoint…</h1>
