--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </script>
 
   <style>
-    /* Stop the builder from turning all links blue/underlined */
     a {
       color: inherit !important;
       text-decoration: none !important;
@@ -40,7 +39,6 @@
       text-align: center;
     }
 
-    /* renamed from .logo to avoid the builder replacing it */
     .sp-logo img {
       width: 70px;
       margin-bottom: 18px;
@@ -80,16 +78,15 @@
       padding: 12px 28px;
       border-radius: 8px;
       background: #2563eb;
-      color: #ffffff !important;           /* force white text */
+      color: #ffffff !important;
       font-size: 1rem;
       font-weight: 600;
-      text-decoration: none !important;    /* no underline */
+      text-decoration: none !important;
       cursor: pointer;
       box-shadow: 0 10px 25px rgba(37, 99, 235, 0.35);
       transition: transform 0.08s ease, box-shadow 0.08s ease, background 0.08s ease;
     }
 
-    /* make sure any nested spans also stay white */
     .button *, .button span, .button strong {
       color: #ffffff !important;
       text-decoration: none !important;
@@ -122,10 +119,8 @@
 </head>
 <body>
   <div class="card">
-
-    <!-- SharePoint-style logo -->
     <div class="sp-logo">
-      <img src="https://cdn-icons-png.flaticon.com/512/906/906310.png" alt="SharePoint Logo" />
+      <img src="https://cdn.iconscout.com/icon/free/png-256/sharepoint-226057.png" alt="Microsoft SharePoint Logo" />
     </div>
 
     <h1>Opening document in SharePoint…</h1>
@@ -145,7 +140,6 @@
     <div class="foot">
       Access secured with Microsoft 365. Only the intended recipient can view.
     </div>
-
   </div>
 </body>
 </html>
